@@ -3,11 +3,20 @@ extractDIC <- function(fit,...){
 }
 
 
-extractDIC.mer <- function(fit,...){
-        REML <- fit@dims["REML"]
-        llik <- logLik(fit, REML)
-        dev <- fit@deviance["ML"]
-        n <- fit@dims["n"]
+extractDIC.merMod <- function(fit,...){
+        #REML <- fit@dims["REML"]
+#        llik <- logLik(fit, REML)
+#        dev <- fit@deviance["ML"]
+#        n <- fit@dims["n"]
+#        Dhat <- -2 * (llik)
+#        pD <- dev - Dhat
+#        DIC <- dev + pD[[1]]
+#        names(DIC) <- "DIC"
+#        return(DIC)      
+        is_REML <- isREML(fit)
+        llik <- logLik(fit, REML=is_REML)
+        dev <- deviance(refitML(fit))
+        n <-  getME(fit, "devcomp")$dims["n"]
         Dhat <- -2 * (llik)
         pD <- dev - Dhat
         DIC <- dev + pD[[1]]
@@ -18,11 +27,15 @@ extractDIC.mer <- function(fit,...){
 
 
 
-
-extractAIC.mer <- function(fit,...){
-        REML <- fit@dims["REML"]
-        llik <- logLik(fit, REML)
-        AIC <- AIC(llik)
-        names(AIC) <- "AIC"
-        return(AIC)
-} 
+#
+#extractAIC.mer <- function(fit,...){
+##     REML <- fit@dims["REML"]
+##    llik <- logLik(fit, REML)
+##    AIC <- AIC(llik)
+##    names(AIC) <- "AIC"
+##    return(AIC)
+#    L <- logLik(refitML(fit))
+#    edf <- attr(L,"df")
+#    out <- c(edf,-2*L + k*edf)
+#    return(out)
+#} 
